# ESP32S3-Sr-Bafacloud-Wxapp-Project

./: README.md
1.Software/: README.md
1.Software/ESP32_Project/: Makefile  README.md  lv_font.bin.ord  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig.save
1.Software/ESP32_Project/components/aht20/: CMakeLists.txt  aht20_driver.c
1.Software/ESP32_Project/components/aht20/include/: aht20_driver.h
1.Software/ESP32_Project/components/button/: CMakeLists.txt
1.Software/ESP32_Project/components/button/include/: bsp_button.h  button.h
1.Software/ESP32_Project/components/button/src/: button.c
1.Software/ESP32_Project/components/esp32-camera/driver/: esp_camera.c
1.Software/ESP32_Project/components/esp_cmd/: CMakeLists.txt  cmd_init.c  component.mk
1.Software/ESP32_Project/components/i2c_master/include/: i2c_master.h
1.Software/ESP32_Project/components/lvgl/: lv_conf_template.h
1.Software/ESP32_Project/components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
1.Software/ESP32_Project/components/lvgl_fs_if/: lv_fs_if.h  lv_fs_pc.c
1.Software/ESP32_Project/main/: CMakeLists.txt  component.mk  main.c
1.Software/ESP32_Project/main/Init_Config/: BaseConfig.h  initconfig.c  spiffsconfig.c  wificonfig.c
1.Software/ESP32_Project/main/app_task/: app_event.c  app_queue.c  app_sem.c  app_task.c  app_task.h
1.Software/ESP32_Project/main/cam_task/: cam_task.c
1.Software/ESP32_Project/main/lvgl_task/img/: _esp_120x140.c  _fan_50x50.c  _humi_70x70.c  _key_50x50.c  (+5 more)
1.Software/ESP32_Project/main/mqtt_bafa/: tcp_mqtt.c  tcp_mqtt.h
1.Software/ESP32_Project/main/speech_rec/: speech_rec.c
1.Software/ESP32_Project/main/web_file/: web_config.c  web_config.h
1.Software/ESP32_Project/spiffs/: wificonfig.html
1.Software/Wxapp_Project/: README.md
1.Software/Wxapp_Project/wxbemfa/: app.json  project.config.json  project.private.config.json
2.Hardware/: README.md
Hardware/: README.md
Software/: README.md
Software/ESP32_Project/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.bak  sdkconfig.old
Software/ESP32_Project/components/esp_cmd/: cmd_init.h
Software/ESP32_Project/components/i2c_master/: i2c_master.c
Software/ESP32_Project/components/lvgl/: Kconfig
Software/ESP32_Project/components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
Software/ESP32_Project/components/lvgl_fs_if/: CMakeLists.txt  lv_fs_fatfs.c
Software/ESP32_Project/components/speech_recognition/: Kconfig.projbuild
Software/ESP32_Project/main/: CMakeLists.txt  component.mk  main.c
Software/ESP32_Project/main/Init_Config/: BaseConfig.h  initconfig.c  sdconfig.c  spiffsconfig.c  wificonfig.c
Software/ESP32_Project/main/Init_Config/include/: BaseConfig.h
Software/ESP32_Project/main/app_task/: app_event.c  app_queue.c  app_sem.c  app_task.c  app_task.h  app_timer.c
Software/ESP32_Project/main/app_task/include/: app_task.h
Software/ESP32_Project/main/cam_task/: cam_task.c  cam_task.h
Software/ESP32_Project/main/lvgl_task/img/: _StuLeTian_200x60.c  _back_40x40.c  _camera_110x110.c  _camera_80x80.c  _clock_110x110.c  _clock_80x80.c  _image_110x110.c  _rocket_60x35.c  _sd_110x110.c  _set_80x80.c  _takepic_50x50.c  _weather_110x110.c  _weather_80x80.c  img_skew_strip.c
Software/ESP32_Project/main/lvgl_task/include/: gui_anim.h  gui_guider.h
Software/ESP32_Project/main/lvgl_task/src/: gui_anim.c  gui_guider.c  lv_port_indev.c  lvgl_init.c  page_camera.c  page_clock.c  page_image.c  page_sd.c  page_set.c  page_weather.c
Software/ESP32_Project/main/mqtt_bafa/: tcp_mqtt.c
Software/ESP32_Project/main/mqtt_bafa/include/: tcp_mqtt.h
Software/ESP32_Project/main/speech_rec/: speech_if.h  speech_rec.c
Software/ESP32_Project/main/speech_rec/include/: speech_if.h
Software/ESP32_Project/main/web_file/: web_config.c  web_config.h
Software/ESP32_Project/main/web_file/include/: web_config.h
Software/ESP32_Project/spiffs/: config.html  home.html  index.html  main.html  success.html  webfs.html  wificonfig.html
Software/Wxapp_Project/wxbemfa/: app.json  project.private.config.json
(+45 files in other folders)
